--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@alipay/mobilegw-rpc-client": "^1.0.6",
     "@babel/parser": "^7.5.5",
-    "@babel/traverse": "^7.5.5"
+    "@babel/traverse": "^7.5.5",
+    "moment": "^2.24.0",
+    "typescript": "^3.5.3"
   }
 }
