--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chair-comments",
-  "version": "1.0.0",
+  "name": "zaku.js",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "@babel/parser": "^7.5.5",
     "@babel/traverse": "^7.5.5",
     "moment": "^2.24.0",
+    "tapable": "^1.1.3",
     "typescript": "^3.5.3"
   }
 }
