--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@alipay/mobilegw-rpc-client": "^1.0.6",
     "@babel/parser": "^7.5.5",
     "@babel/traverse": "^7.5.5",
+    "@babel/types": "^7.5.5",
     "moment": "^2.24.0",
     "tapable": "^1.1.3",
     "typescript": "^3.5.3"
