--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "moment": "^2.24.0",
     "tapable": "^1.1.3",
     "typescript": "^3.5.3"
+  },
+  "devDependencies": {
+    "ndb": "^1.1.4"
   }
 }
