--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,12 @@
       "request": "launch",
       "name": "Launch Program",
       "program": "${workspaceFolder}/test-default.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "解释器",
+      "program": "${workspaceFolder}/test/interpreter.test.js"
     }
   ]
 }
